Personalizando views automaticas do laravel

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -59,6 +59,11 @@ body{
     background-color: #c9b9b4;
 }
 
+#principal{
+    margin-left: 0px; 
+    margin-right: 0px;
+}
+
 /* Div dos cartões */
 #page{
     margin-top: 1em;
