Adicionando imagens no ajuda e modal no cadastro

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -178,8 +178,8 @@ body{
     margin-bottom: 0px;
 }
 
-#serie{
-    margin-left: 1em;
+.fa-question-circle{
+    cursor: pointer;
 }
 
 #perguntas .card-header, .btn-link{
